--- a/Unknown/Unknown/Base.lproj/Main.storyboard
+++ b/Unknown/Unknown/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Hme-85-L6s">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="STj-kQ-OTO">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
@@ -893,6 +893,9 @@
                                                 <integer key="value" value="20"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="passwordUpdateBtn:" destination="STj-kQ-OTO" eventType="touchUpInside" id="d0c-25-CH0"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iex-jN-Qci">
                                         <rect key="frame" x="16" y="44" width="382" height="42"/>
@@ -990,10 +993,17 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호가 일치하지 않습니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d71-E6-0pT">
+                                        <rect key="frame" x="247.5" y="234" width="150.5" height="18"/>
+                                        <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="Iex-jN-Qci" firstAttribute="top" secondItem="Hhh-1D-Ftw" secondAttribute="top" constant="44" id="0kw-ea-Xhv"/>
+                                    <constraint firstItem="d71-E6-0pT" firstAttribute="top" secondItem="5j0-t7-19R" secondAttribute="bottom" constant="4" id="47E-fd-Irw"/>
                                     <constraint firstAttribute="trailing" secondItem="dP2-hb-gQs" secondAttribute="trailing" constant="16" id="6gp-a0-Xcf"/>
                                     <constraint firstItem="dP2-hb-gQs" firstAttribute="top" secondItem="Iex-jN-Qci" secondAttribute="bottom" constant="30" id="9hm-2P-Phn"/>
                                     <constraint firstItem="dP2-hb-gQs" firstAttribute="leading" secondItem="Hhh-1D-Ftw" secondAttribute="leading" constant="16" id="AWv-qf-qcT"/>
@@ -1003,6 +1013,7 @@
                                     <constraint firstItem="QRY-4n-Njv" firstAttribute="leading" secondItem="Hhh-1D-Ftw" secondAttribute="leading" constant="16" id="Kz1-im-7dx"/>
                                     <constraint firstItem="dP2-hb-gQs" firstAttribute="top" secondItem="5wd-G0-dKv" secondAttribute="bottom" constant="8" id="QlA-YA-tu1"/>
                                     <constraint firstAttribute="trailing" secondItem="QRY-4n-Njv" secondAttribute="trailing" constant="16" id="aKq-LN-1o1"/>
+                                    <constraint firstAttribute="trailing" secondItem="d71-E6-0pT" secondAttribute="trailing" constant="16" id="caB-Aj-FqP"/>
                                     <constraint firstItem="Iex-jN-Qci" firstAttribute="leading" secondItem="Hhh-1D-Ftw" secondAttribute="leading" constant="16" id="egM-jT-atA"/>
                                     <constraint firstItem="5j0-t7-19R" firstAttribute="top" secondItem="dP2-hb-gQs" secondAttribute="bottom" constant="30" id="iKw-yO-lGM"/>
                                     <constraint firstAttribute="trailing" secondItem="Iex-jN-Qci" secondAttribute="trailing" constant="16" id="kwP-6k-HOq"/>
@@ -1027,6 +1038,7 @@
                         <outlet property="newpasswordTxtField" destination="4zA-FO-A8Y" id="bfI-iB-GDg"/>
                         <outlet property="newpwView" destination="dP2-hb-gQs" id="sDr-6q-Xf4"/>
                         <outlet property="passwordTxtField" destination="8DP-my-sBM" id="DIc-r8-hI8"/>
+                        <outlet property="passwordUpdateBtn" destination="QRY-4n-Njv" id="7MT-FG-tgc"/>
                         <outlet property="pwView" destination="Iex-jN-Qci" id="Eer-Dg-qli"/>
                     </connections>
                 </viewController>
