--- a/Unknown/Unknown/Base.lproj/Main.storyboard
+++ b/Unknown/Unknown/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="STj-kQ-OTO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ln7-8q-I9K">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
@@ -475,23 +475,13 @@
                                                         <constraint firstAttribute="height" constant="36" id="yEM-8n-U60"/>
                                                     </constraints>
                                                 </imageView>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kZf-ST-LQE">
-                                                    <rect key="frame" x="341" y="200" width="57" height="57"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="57" id="woK-EE-ncP"/>
-                                                    </constraints>
-                                                </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="H7s-S4-NIz" firstAttribute="leading" secondItem="oCP-ru-Eay" secondAttribute="leading" constant="16" id="8Ij-wN-9xb"/>
                                                 <constraint firstItem="Baa-dv-Vas" firstAttribute="top" secondItem="oCP-ru-Eay" secondAttribute="top" constant="16" id="Iyg-Up-Cdm"/>
                                                 <constraint firstItem="Q6n-cD-qbU" firstAttribute="leading" secondItem="oCP-ru-Eay" secondAttribute="leading" constant="60" id="LcT-jQ-gpQ"/>
-                                                <constraint firstAttribute="trailing" secondItem="kZf-ST-LQE" secondAttribute="trailing" constant="16" id="Ryg-jd-Mlk"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Baa-dv-Vas" secondAttribute="trailing" constant="20" symbolic="YES" id="ZdQ-NY-Jmq"/>
                                                 <constraint firstItem="Q6n-cD-qbU" firstAttribute="top" secondItem="oCP-ru-Eay" secondAttribute="top" constant="35" id="f5k-ZO-WRo"/>
-                                                <constraint firstItem="kZf-ST-LQE" firstAttribute="leading" secondItem="oCP-ru-Eay" secondAttribute="leading" constant="341" id="kIw-Jz-hKN"/>
-                                                <constraint firstItem="kZf-ST-LQE" firstAttribute="top" secondItem="oCP-ru-Eay" secondAttribute="top" constant="200" id="kpg-cj-SXL"/>
                                                 <constraint firstItem="H7s-S4-NIz" firstAttribute="top" secondItem="oCP-ru-Eay" secondAttribute="topMargin" constant="60" id="lib-zm-edC"/>
                                                 <constraint firstItem="wVB-vb-9W0" firstAttribute="leading" secondItem="oCP-ru-Eay" secondAttribute="leading" constant="16" id="qsp-7s-F3p"/>
                                                 <constraint firstItem="Baa-dv-Vas" firstAttribute="leading" secondItem="oCP-ru-Eay" secondAttribute="leading" constant="60" id="yyA-zT-GXS"/>
@@ -777,19 +767,16 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PfE-dU-Nyc">
-                                        <rect key="frame" x="308" y="158" width="90" height="28"/>
+                                        <rect key="frame" x="304" y="158" width="94" height="32"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain">
-                                            <attributedString key="attributedTitle">
-                                                <fragment content="비밀번호 변경">
-                                                    <attributes>
-                                                        <font key="NSFont" metaFont="cellTitle"/>
-                                                        <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                                    </attributes>
-                                                </fragment>
-                                            </attributedString>
+                                        <buttonConfiguration key="configuration" style="plain" title="비밀번호 변경">
+                                            <fontDescription key="titleFontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="12"/>
                                             <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="changepwPush:" destination="qz3-qG-XOa" eventType="touchUpInside" id="3gI-XK-Wgy"/>
+                                            <action selector="changepwVC:" destination="vnS-3S-1Cc" eventType="touchUpInside" id="V3Z-Tu-5f6"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="내 게시물" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8z-l4-C6K">
                                         <rect key="frame" x="32" y="210" width="63.5" height="24"/>
@@ -851,18 +838,20 @@
                             <constraint firstItem="s7p-A2-cs2" firstAttribute="trailing" secondItem="ohf-3x-1LD" secondAttribute="trailing" id="b9h-e6-Lt1"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="BWb-TV-3wr"/>
                     <connections>
+                        <outlet property="changePWBtn" destination="PfE-dU-Nyc" id="c8u-SB-jFG"/>
                         <outlet property="profileImgView" destination="vnS-3S-1Cc" id="KRY-V6-qzb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9b3-Z2-oXv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1143.4782608695652" y="2234.5982142857142"/>
+            <point key="canvasLocation" x="-233.33333333333334" y="2234.5982142857142"/>
         </scene>
         <!--Change Password View Controller-->
         <scene sceneID="4BN-UY-64E">
             <objects>
-                <viewController id="STj-kQ-OTO" customClass="ChangePasswordViewController" customModule="Unknown" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="changePW" id="STj-kQ-OTO" customClass="ChangePasswordViewController" customModule="Unknown" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Hf-Kv-PvT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1032,6 +1021,7 @@
                             <constraint firstAttribute="bottom" secondItem="Hhh-1D-Ftw" secondAttribute="bottom" id="jHI-Qn-v3C"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="GI2-hN-aOE"/>
                     <connections>
                         <outlet property="checkPasswordTxtField" destination="rnD-yb-7vI" id="nSO-8M-b8X"/>
                         <outlet property="checkpwView" destination="5j0-t7-19R" id="Mkq-t9-3E0"/>
@@ -1044,7 +1034,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2E6-l0-gAd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1143" y="3528"/>
+            <point key="canvasLocation" x="-233.33333333333334" y="3527.6785714285711"/>
         </scene>
         <!--Post View Controller-->
         <scene sceneID="g6m-sZ-gFO">
@@ -1064,7 +1054,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pBZ-g2-PES">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="270"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vjb-Y9-E8a">
                                                 <rect key="frame" x="16" y="28" width="36" height="36"/>
@@ -1111,7 +1101,7 @@
                                             <constraint firstItem="aNz-Cv-O2X" firstAttribute="top" secondItem="pBZ-g2-PES" secondAttribute="top" constant="47" id="Xth-wD-5un"/>
                                             <constraint firstItem="aNz-Cv-O2X" firstAttribute="leading" secondItem="Vjb-Y9-E8a" secondAttribute="trailing" constant="8" id="bWa-NQ-vPS"/>
                                             <constraint firstItem="Sbj-UV-UdV" firstAttribute="leading" secondItem="pBZ-g2-PES" secondAttribute="leading" constant="16" id="bdj-2e-JYm"/>
-                                            <constraint firstAttribute="height" constant="270" id="cE5-ux-uzH"/>
+                                            <constraint firstAttribute="height" constant="100" id="cE5-ux-uzH"/>
                                             <constraint firstItem="c0O-xC-nOr" firstAttribute="leading" secondItem="Vjb-Y9-E8a" secondAttribute="trailing" constant="8" id="gm8-fg-c7G"/>
                                             <constraint firstItem="c0O-xC-nOr" firstAttribute="top" secondItem="pBZ-g2-PES" secondAttribute="top" constant="28" id="hS4-3c-mGm"/>
                                             <constraint firstItem="Uha-pO-XuJ" firstAttribute="top" secondItem="pBZ-g2-PES" secondAttribute="top" constant="16" id="x3d-mR-Tiw"/>
@@ -1209,6 +1199,21 @@
                                             </attributedString>
                                         </buttonConfiguration>
                                     </button>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="k0s-Ac-9bw">
+                                        <rect key="frame" x="0.0" y="108" width="414" height="186"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ve1-9d-gYO">
+                                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ve1-9d-gYO" id="U1H-O2-Ebj">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
@@ -1250,7 +1255,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rqx-4o-1Id" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1143" y="2881"/>
+            <point key="canvasLocation" x="-1143.4782608695652" y="2880.8035714285711"/>
         </scene>
         <!--Signup View Controller-->
         <scene sceneID="nhz-iX-u3I">
@@ -1535,6 +1540,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cvm-nt-Iid" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1143.4782608695652" y="278.57142857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qKc-MR-07U">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ln7-8q-I9K" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RFE-4x-1J4">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="qz3-qG-XOa" kind="relationship" relationship="rootViewController" id="pXr-Yl-YRc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ge7-FM-hBe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1143.4782608695652" y="2234.5982142857142"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="QCR-1V-d1L">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="a91-dn-c39" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LkQ-Oa-zan">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="STj-kQ-OTO" kind="relationship" relationship="rootViewController" id="RO2-wI-3Hw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sBE-ju-Bh7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1143.4782608695652" y="3527.6785714285711"/>
         </scene>
     </scenes>
     <resources>
